syntax = "proto3";

package codepix.transaction.read;
option go_package = "codepix/bank-api/proto/codepix/transaction/read";

import "google/protobuf/timestamp.proto";

enum Status {
  _ = 0;
  Started = 1;
  Confirmed = 2;
  Completed = 3;
  Failed = 4;
}

message FindRequest {
  bytes id = 1; // @gotags: validate:"required"
}
message FindReply {
  bytes id = 1;
  bytes sender = 2;
  bytes sender_bank = 3;
  bytes receiver = 4;
  bytes receiver_bank = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  uint64 amount = 8;
  string description = 9;
  Status status = 10;
  string reason_for_failing = 11;
}

message ListRequest {
  google.protobuf.Timestamp created_after = 1;
  bytes sender_id = 2;
  bytes receiver_id = 3;
  uint64 limit = 4;
  uint64 skip = 5;
}
message ListItem {
  bytes id = 1;
  bytes sender = 2;
  bytes sender_bank = 3;
  bytes receiver = 4;
  bytes receiver_bank = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  uint64 amount = 8;
  string description = 9;
  Status status = 10;
  string reason_for_failing = 11;
}
message ListReply { repeated ListItem items = 1; }

service Service {
  rpc Find(FindRequest) returns (FindReply) {};
  rpc List(ListRequest) returns (ListReply) {};
}
